# amborix_template

./: .env  CMakeLists.txt  Makefile  Readme.md  ironmake.sh
mod-custom/: CMakeLists.txt
mod-custom/src/: CMakeLists.txt
odl/: CMakeLists.txt
src/: CMakeLists.txt  my-amx.c
